[tool.poetry]
name = "bottle-ssl"
version = "0.1.0"
description = "A simple web page using BottlePy and SSL"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]

[tool.poetry.dependencies]
python = "*"
beaker = "^1.11"
cheroot = "^8.3"
bottle = "^0.12.18"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
requests = "^2.21"
