[tool.poetry]
name = "bottle-ssl"
version = "0.1.0"
description = "A simple web page using BottlePy and SSL"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.6,<4"
beaker = "^1.11"
cheroot = "^8.6"
bottle = "^0.12.23"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
requests = "^2.21"
